feat: refactor code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,25 @@
 {
   "compilerOptions": {
-    "noEmit": false,
+    "target": "esnext",
+    "module": "esnext",
+    "lib": ["esnext", "dom"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "moduleResolution": "node",
     "outDir": "build/",
     "baseUrl": ".",
-    "module": "esnext",
-    "target": "es2016",
-    "lib": ["esnext", "dom"],
     "sourceMap": false,
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true,
-    "useDefineForClassFields": false,
-    "experimentalDecorators": true,
     "esModuleInterop": true,
-    "noImplicitReturns": true,
     "removeComments": false,
     "noUnusedLocals": true,
-    "allowJs": false,
-    "strict": true,
     "declaration": true,
     "declarationDir": "types/dist/",
     "paths": {}
   },
-  "include": ["src", "types/globals.d.ts"],
+  "include": ["src", "types/globals.d.ts", "types/index.d.ts"],
   "exclude": ["node_modules"]
 }
 // https://www.tslang.cn/docs/handbook/compiler-options.html
