--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "call-app",
-  "version": "1.0.1",
-  "description": "通用的唤起app的库",
+  "name": "@yuntijs/call-app",
+  "version": "1.1.2",
+  "description": "通用的唤起 app 的库",
   "scripts": {
     "ts-check": "tsc --noEmit",
     "declare-type": "tsc --emitDeclarationOnly",
@@ -18,7 +18,8 @@
     "compile": "commander-tools run compile",
     "dist": "commander-tools run dist",
     "analyz": "commander-tools run dist --analyz",
-    "build": "commander-tools run build & npm run declare-type",
+    "clean": "rm -rf dist docs es lib types/dist",
+    "build": "npm run clean && commander-tools run build",
     "pub": "commander-tools run pub",
     "pub-beta": "commander-tools run pub-beta",
     "unpub": "commander-tools run unpub",
@@ -28,7 +29,13 @@
   },
   "main": "lib/index.js",
   "module": "es/index.js",
-  "typings": "types/dist/index.d.ts",
+  "typings": "types/index.d.ts",
+  "files": [
+    "es",
+    "umd",
+    "dist",
+    "types"
+  ],
   "keywords": [
     "vue",
     "react",
@@ -76,5 +83,9 @@
   "peerDependencies": {},
   "dependencies": {
     "core-js": "^3.6.5"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   }
 }
